volume fix + album art on mobile player

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -30,12 +30,13 @@
       width: 100%;
       height: 100px;
       flex-direction: row;
-      background-color: rgba(0, 0, 0, 0.9);
+      background-color:rgb(153, 41, 125);
       justify-content: space-evenly;
       bottom: 0;
       left: 0;
       position: fixed;
       z-index: 1;
+      border-top: 5px solid rgba(255, 255, 255, 0.296);
     }
 
     .profile-img {
